--- a/Code/requirements.txt
+++ b/Code/requirements.txt
@@ -4,11 +4,10 @@ numpy>=1.20.0
 matplotlib>=3.4.0
 plotly>=5.3.0
 seaborn>=0.11.0
-Bluesky client
+# Bluesky client
 atproto>=0.0.1
-Network analysis
+# Network analysis
 networkx>=2.6.0
 python-louvain>=0.15
-huggingface-hub>=0.13.0  
+huggingface-hub>=0.13.0
 python-dateutil>=2.8.0
-
